# flipperzero_sim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flipper.c  snake.c  tetris.c
img/: micro4x6.xbm
src/: flipper.h  tetris.c  tetris_pieces.h
